# MetOceanViewer

./: .codacy.yml  .gitignore  .gitmodules  .travis.yml  ADCValidator.pro  ADCvalidatior.qrc  ADCvalidator.h  ADCvalidator_main.cpp  ADCvalidator_main.ui  CMakeLists.txt  FileFormat.md  LICENSE  MetOcean.pro  MetOceanViewer.dbp  MetOceanViewer.pro  MetOceanViewer.qrc  README.md  add_imeds_data.cpp  add_imeds_data.h  add_imeds_data.ui  annotations.js  build.sh  build_xtide.sh  general_functions.cpp  global.pri  highcharts.js  hwm.cpp  hwm_data.cpp  hwm_functions.cpp  hwm_map.html  imeds.cpp  imeds.h  imeds_data.cpp  imeds_functions.cpp  imeds_maps.html  mov_release_revision.txt  noaa_functions.cpp  noaa_maps.html  reg_plot.html  resources.rc  (+5 more)
CMakeModules/: FindPROJ4.cmake
MetOceanData/: MetOceanData.pro  driver.cpp  driver.h  main.cpp  metoceandata.cpp  metoceandata.h  options.cpp  options.h  optionslist.h
MetOceanHWMStats/: MetOceanHWMStats.pro  main.cpp
MetOceanInstaller/: buildDmg_MacOSX.sh  buildInstaller_Unix.sh  buildInstaller_Windows.sh  buildInstaller_Windows_mingw.sh
MetOceanViewer/: CMakeLists.txt  MetOceanViewer.pro  chartoptions.cpp  chartoptions.ui  chartoptionsmenu.cpp  chartoptionsmenu.h  chartview.cpp  chartview.h  colors.h  combobox.cpp  datebox.cpp  doublespinbox.h  mainwindow.cpp  mainwindow.h  mapchartwidget.cpp  mapchartwidget.h  mapfunctions.cpp  mapview.h  movResource.qrc  ndbctab.cpp  ndbctab.h  newtabdialog.cpp  newtabdialog.ui  noaatab.cpp  noaatab.h  resources.qrc  resources.rc  stationlist.cpp  stationlist.h  tabbar.cpp  tabbar.h  tabwidget.cpp  textentry.h  unitsmenu.cpp  unitsmenu.h  userdataform.cpp  userdataform.h  userdatamap.cpp  userdataseries.cpp  userdataseries.h  (+5 more)
MetOceanViewer/function_tests/ReadADCIRC/ASCII/: stations.csv
MetOceanViewer/function_tests/SessionFiles/: session_read_test_oldFormat.mvs
MetOceanViewer/qml/: EsriMapViewer.qml  InfoWindow.qml  MapViewer.qml  MapboxGLMapViewer.qml  MapboxMapViewer.qml  MovMapItem.qml  OsmMapViewer.qml
MetOceanViewer/src/: MetOceanViewer_main.cpp  aboutdialog.cpp  aboutdialog.h  adcircstationoutput.cpp  adcircstationoutput.h  addtimeseriesdialog.cpp  addtimeseriesdialog.h  chartview.cpp  chartview.h  colors.cpp  colors.h  crms.cpp  crms.h  crmsdatabase.cpp  crmsdatabase.h  crmsdialog.cpp  crmsdialog.h  crmsdialog.ui  dflow.cpp  dflow.h  errors.cpp  errors.h  filetypes.cpp  filetypes.h  hwm.cpp  hwm.h  imeds_station.h  javascriptAsyncReturn.cpp  keyhandler.cpp  keyhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mapfunctions.cpp  mapfunctions.h  metoceanviewer.h  mov_nefis.cpp  mov_nefis.h  mov_qchartview.cpp  mov_session.cpp  (+29 more)
MetOceanViewer/ui/: addtimeseriesdialog.ui  crmsdialog.ui  mainwindow.ui  timeseries_add_data.ui
MetOceanViewer2/: MetOceanViewer2.pro  chartoptions.cpp  chartoptions.h  chartoptionsmenu.cpp  chartoptionsmenu.h  chartview.cpp  chartview.h  colors.h  combobox.cpp  combobox.h  datebox.cpp  datebox.h  doublespinbox.cpp  fileinfo.cpp  fileinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapchartwidget.cpp  mapchartwidget.h  mapfunctions.cpp  mapfunctions.h  mapview.cpp  mapview.h  metocean.cpp  metocean.h  ndbctab.cpp  ndbctab.h  newtabdialog.cpp  newtabdialog.h  newtabdialog.ui  noaaproductlist.cpp  noaaproductlist.h  noaatab.cpp  noaatab.h  stationlist.cpp  stationlist.h  stationmodel.cpp  stationmodel.h  (+19 more)
MetOceanViewer_CMD/: MetOceanViewer_CMD.pro  driver.cpp  main.cpp
MetOceanViewer_GUI/: MetOceanViewer_GUI.pro  movResource.qrc  movVersion.h  version.h
MetOceanViewer_installer/: buildInstaller_Unix.sh  buildInstaller_Windows.sh
ParseCRMSDatabase/: ParseCRMSDatabase.pro  crmsdatabase.cpp  crmsdatabase.h  main.cpp
ProcessCrmsDatabase/: CMakeLists.txt  ProcessCrmsDatabase.pro  cdate.cpp  cdate.h  crmsdatabase.cpp  crmsdatabase.h  crmsdatacontainer.cpp  crmsdatacontainer.h
ProcessCrmsDatabase/src/: cdate.cpp  cdate.h  crmsdatabase.cpp  crmsdatabase.h  crmsdatacontainer.cpp  crmsdatacontainer.h  main.cpp
data/: noaa_stations.csv  usgs_stations.csv  usgs_streamgauges.csv
html/: hwm_map.html  imeds_maps.html  noaa_maps.html  reg_plot.html  timeseries_maps.html  usgs_maps.html  xtide_maps.html
img/: icon.icns  logo.pdn
include/: ADCvalidator.h  MetOceanViewer.h  about_dialog.h  adcirc_station_output.h  add_imeds_data.h  callout.h  general_functions.h  hwm.h  hwm_orig.h  imeds.h  imeds_station.h  javascriptAsyncReturn.h  keyhandler.h  mov_colors.h  mov_errors.h  mov_flags.h  mov_generic.h  mov_qchartview.h  mov_qwebenginepage.h  mov_session.h  myqwebenginepage.h  noaa.h  timeseries.h  timeseries_add_data.h  update_dialog.h  user_timeseries.h  usgs.h  xtide.h
installer/: getLibraries.sh
js/: annotations.js  highcharts.js  hwm_map.js  noaa_maps.js  reg_plot.js  timeseries_maps.js  usgs_maps.js  xtide_maps.js
libkdtree2/: libkdtree2.pro  qkdtree2.h
libnefis/: libnefis.pro
libnetcdfcxx/: libnetcdfcxx.pro
libproj4/: epsg.cpp  epsg.h  libproj4.pro  proj4.cpp  proj4.h  proj4_global.h
libraries/: libraries.pro
libraries/libmetocean/: CMakeLists.txt  constants.cpp  constants.h  crmsdata.cpp  crmsdata.h  crmsdatabase.cpp  crmsdatabase.h  datum.h  format_tzdata.sh  generic.cpp  generic.h  highwatermarks.cpp  highwatermarks.h  hmdf.cpp  hmdf.h  hmdfasciiparser.cpp  hmdfasciiparser.h  hmdfstation.cpp  hmdfstation.h  hwmdata.cpp  hwmdata.h  libmetocean.pro  metocean_global.h  metocean_init.cpp  metocean_init.h  movStation.cpp  movStation.h  ndbcdata.cpp  ndbcdata.h  netcdftimeseries.cpp  netcdftimeseries.h  noaacoops.cpp  noaacoops.h  resource_files.qrc  station.cpp  station.h  stationlocations.cpp  stationlocations.h  stringutil.cpp  stringutil.h  (+14 more)
libraries/libmetocean/data/: assembleNOAADatums.sh  assembleXTideDatums.sh  crms_stations.csv  noaa_stations.csv  usgs_stations.csv  xtide_stations.csv
libraries/libtide/: CMakeLists.txt  libtide.pro  tide.qrc
nsis/: MetOceanViewer_installScript-MSVC32.nsi  MetOceanViewer_installScript-MSVC64.nsi  MetOceanViewer_installScript-MinGW32.nsi  MetOceanViewer_installScript.nsi  (+2 more)
src/: callout.cpp  (+67 more)
(+434 files in other folders)
